objects/Off_Type__c/Off_Type__c.object-meta.xml
<CustomObject>
    <label>Off Type</label>
    <nameField>
        <label>Off Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Off Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>