objects/Off_Type__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipment</label>
    <type>Checkbox</type>
</CustomField>