objects/Off_Type__c/fields/Map_Time_Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Map_Time_Rate_Code__c</fullName>
    <label>Map Time/Rate Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_Rate_Code</valueSetName>
    </valueSet>
</CustomField>