objects/Off_Type__c/fields/Map_to_Time_Type__c.field-meta.xml
<CustomField>
    <fullName>Map_to_Time_Type__c</fullName>
    <label>Map to Time Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TimeType</valueSetName>
    </valueSet>
</CustomField>