objects/Off_Type__c/fields/Personnel__c.field-meta.xml
<CustomField>
    <fullName>Personnel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personnel</label>
    <type>Checkbox</type>
</CustomField>