objects/Off_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Map_to_Time_Type__c</columns>
    <columns>Map_Time_Rate_Code__c</columns>
    <columns>Equipment__c</columns>
    <columns>Personnel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>